# meilisearch-mcp

./: .env  .gitignore  LICENSE  README.md  meilisearch-server.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yml  test.yml
src/meilisearch_mcp/: client.py  documents.py  indexes.py  keys.py  logging.py  monitoring.py  server.py  settings.py  tasks.py  templates.py
tests/: test_server.py
