[project]
name = "meilisearch-mcp"
version = "0.1.0"
description = "MCP server for Meilisearch"
requires-python = ">=3.10"
dependencies = [
    "meilisearch>=0.33.0",
    "mcp>=0.1.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
meilisearch-mcp = "meilisearch_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meilisearch_mcp"]